# technicaltest

./: .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
notes/: todo.md
origin/: conftest.py  db.sqlite3  manage.py  requirements.txt  setup.cfg  setup.py
origin-app/: angular.json  package-lock.json  package.json
origin-app/configs/: karma.conf.js
origin-app/e2e/src/: app.e2e-spec.ts
origin-app/src/app/: app.component.spec.ts
origin/bonds/: admin.py  factories.py  logic.py  models.py  serializers.py  tests.py  urls.py  views.py
origin/bonds/migrations/: 0001_initial.py  0002_auto_20190608_1027.py  0002_bond.py  0002_bond_user.py  0003_auto_20190608_1051.py  0003_auto_20190609_1439.py
origin/bonds/tests/: test_logic.py  test_views.py
origin/bonds/utils/: currency.py  lei.py  tests.py
origin/data/: README.md  iso_4217.json
origin/origin/: settings.py  urls.py
origin/origin/settings/: base.py  dev.py  prod.py  static.py
origin/scripts/: dev.runserver.sh  format.sh  lint.sh  rm-db.sh  rm-migrations.sh
origin/tokens/: apps.py  urls.py
origin/users/: models.py
origin/users/migrations/: 0001_initial.py
project/: health.py  settings.py  urls.py
project/bonds/: client.py  models.py  serializers.py  urls.py  views.py
project/bonds/migrations/: 0001_initial.py
tests/: conftest.py  fixtures.py  test_health.py
tests/bonds/: test_client.py  test_serializers.py
tests/bonds/views/: test_list_get.py  test_list_post.py
