[tool.poetry]
name = "pythontechnicaltest"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "2.2.13"
djangorestframework = "3.9.4"
pytest-django = "^4.1.0"
pytest-cov = "^2.10.1"
pytest-pythonpath = "^0.7.3"
requests = "^2.25.0"
pytest-factoryboy = "^2.0.3"
factory-boy = "^3.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
